--- a/static/style.css
+++ b/static/style.css
@@ -1,71 +1,51 @@
-h1{
-    background-color: black;
-    color:white;
-    width: 80%;
-    text-align: center;
-    font-size: 2em;
-    vertical-align: center;
-    border-radius: 1em;
+header
+{
+    border: 1px solid blue;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    width: 90%;
+    min-width: 600px;
+    background-color: white;
 }
 
 a, a:visited, a:link, a:hover, a:active{
     text-decoration: none;
-    color: blue;
-}
-p {
-    margin-top: 0px;
+    color:#0077B6;
 }
 
-fieldset {
-    margin-bottom: 15px;
-    padding: 10px;
+/*Header*/
+
+#header1, #header2
+{
+   text-align: center;
+   margin:0;
+}
+ 
+#logo
+{
+    position: absolute;
+    height: 64px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.9;
 }
 
-legend {
-    padding: 0px 3px;
-    font-weight: bold;
-    font-variant: small-caps;
+/* BODY */
+
+body{
+    background-image: url('wallpaper.png');
+    background-size: cover;
 }
 
-label {
-    width: 110px;
-    display: inline-block;
-    vertical-align: top;
-    margin: 6px;
+section {
+    display: flex;
 }
 
-em {
-    font-weight: bold;
-    font-style: normal;
-    color: #f00;
+#description{
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(to left, rgb(152, 152, 255), white);
 }
-
-input:focus {
-    background: #eaeaea;
-}
-
-input, textarea {
-    width: 249px;
-}
-
-textarea {
-    height: 100px;
-}
-
-select {
-    width: 254px;
-}
-
-input[type=checkbox] {
-    width: 10px;
-}
-
-input[type=submit] {
-    width: 150px;
-    padding: 10px;
-}
-#logo {
-
-    width: 100px;
-  
-  }
