--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1><a href="{{url_for('index')}}">Incroyable design</a>
-            <img id='logo' src="{{url_for('static', filename = 'logo1.png')}}"></h1>
-        </div>
-    </header>
+        <div id="en-tete">
+            <a href="{{url_for('index')}}">
+                <h1 id="header1">OceanPurify</h1>
+                <h2 id="header2">Un océan propre pour un avenir durable</h2>
+                <img src="{{url_for('static', filename = 'logo1.png')}}" id="logo"/>
+            </a>
+        </div>   
+          
+     </header>
 
     <article>
         {% block content %} {% endblock %}
