--- a/templates/form.html
+++ b/templates/form.html
@@ -7,10 +7,10 @@
   <p><i>Complétez le formulaire. Les champs marqué par </i><em>*</em> sont <em>obligatoires</em></p>
   <fieldset>
     <legend>Informations personnelles :</legend>
-      <label for="nom">Nom <em>*</em></label>
-      <input id="nom" name="nom" placeholder="Jean" autofocus="" required=""><br>
       <label for="prenom">Prénom <em>*</em></label>
-      <input id="prenom" name="prenom" placeholder="Valjean" autofocus="" required=""><br>
+      <input id="prenom" name="prenom" placeholder="Jean" autofocus="" required=""><br>
+      <label for="nom">Nom <em>*</em></label>
+      <input id="nom" name="nom" placeholder="Valjean" autofocus="" required=""><br>
       <label for="email">Email <em>*</em></label>
       <input id="email" name="email" type="email" placeholder="prenom.nom@gmail.com" required="" pattern="[a-zA-Z]*[.][a-zA-Z]*@[a-zA-Z]*.[a-zA-Z]*"><br>
       <label for="adresse">Adresse <em>*</em></label>
@@ -28,4 +28,4 @@
   <p><input type="submit" value="Soumettre"></p>
 </form>
 
-  {% endblock %}
+{% endblock %}
