--- a/templates/form.html
+++ b/templates/form.html
@@ -1,31 +1,38 @@
 {% extends 'base.html'%}
 
 {% block content %}
-
+<br>
+<div id="formulaire">
 <h2>Formulaire</h2>
 <form action="{{url_for('liste_donateurs')}}" method="post">
   <p><i>Complétez le formulaire. Les champs marqué par </i><em>*</em> sont <em>obligatoires</em></p>
   <fieldset>
     <legend>Informations personnelles :</legend>
       <label for="prenom">Prénom <em>*</em></label>
-      <input id="prenom" name="prenom" placeholder="Jean" autofocus="" required=""><br>
+      <input id="prenom" name="prenom" placeholder="Jean" autofocus="" required=""><br><br>
       <label for="nom">Nom <em>*</em></label>
-      <input id="nom" name="nom" placeholder="Valjean" autofocus="" required=""><br>
+      <input id="nom" name="nom" placeholder="Valjean" autofocus="" required=""><br><br>
       <label for="email">Email <em>*</em></label>
-      <input id="email" name="email" type="email" placeholder="prenom.nom@gmail.com" required="" pattern="[a-zA-Z]*[.][a-zA-Z]*@[a-zA-Z]*.[a-zA-Z]*"><br>
+      <input id="email" name="email" type="email" placeholder="prenom.nom@gmail.com" required="" pattern="[a-zA-Z]*[.][a-zA-Z]*@[a-zA-Z]*.[a-zA-Z]*"><br><br>
       <label for="adresse">Adresse <em>*</em></label>
       <input id="adresse" name="adresse" placeholder="1 rue Plumet" autofocus="" required=""><br>
   </fieldset>
+  <br>
   <fieldset>
     <legend>Don</legend>
       <label for="don">Somme du don<em>*</em></label>
-      <input id="don" name="don" type="number" placeholder="0" pattern="[0-9]*" required=""><br>
-      <label for="comments">Espace vide pour nous laisser un message si vous le désirez :</label>
-      <textarea id="comments", name="comments"></textarea>
+      <input id="don" name="don" type="number" placeholder="0" pattern="[0-9]*" required=""><br><br>
+      <label for="comments">Espace vide pour nous laisser un message si vous le désirez :</label><br>
+      <textarea id="comments", name="comments" rows="4" cols="60"></textarea>
       <br><br>
       <input type="checkbox" name="conditions" id="conditions" required> En cochant cette case, j'accepte les conditions relatives au don caritatif.
   </fieldset>
-  <p><input type="submit" value="Soumettre"></p>
+  <br>
+  <section>
+    <input type="submit" id="submit" value="Soumettre">
+    <img id="img_form" src="{{url_for('static', filename='form_img.png')}}">
+  </section>
 </form>
+</div>
 
 {% endblock %}
