--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,7 @@ header
     align-self: auto;
     min-width: 600px;
     background-color: white;
+    border-radius: 10px;
 }
 
 a, a:visited, a:link, a:hover, a:active{
@@ -28,7 +29,7 @@ a, a:visited, a:link, a:hover, a:active{
     position: absolute;
     height: 64px;
     position: absolute;
-    left: 0;
+    left: 10px;
     top: 0;
     opacity: 0.9;
 }
@@ -36,7 +37,7 @@ a, a:visited, a:link, a:hover, a:active{
 /* BODY */
 
 body{
-    background-image: url('wallpaper.png');
+    background-image:url('wallpaper.png');
     background-size: cover;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 
@@ -46,24 +47,58 @@ section {
     display: flex;
 }
 
-#images{
-    width:20%;
+#image1{
+    width:75%;
+    border-radius: 10px;
+    border: 2px solid white;
+    margin-left:40%;
+}
+
+#image2{
+    width:44.5%;
+    border-radius: 10px;
+    border: 2px solid white;
+    margin-left:20%
 }
 
 #description{
+    height:auto;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    background-image: linear-gradient(to left, rgb(152, 152, 255), white);
-    border: 2px solid black;
+    background-color: white;
+    background-size:cover;
+    border: 2px solid rgb(168, 168, 255);
     border-radius: 10px;
 }
-
+#description_text{
+    margin:20px;
+    font-size: 1.3em;
+    text-align: center;
+    color:black;
+    text-shadow: 1px 1px 1px white;
+}
+#pourquoi_donner{
+    height:auto;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    background-size:cover;
+    border: 2px solid rgb(168, 168, 255);
+    border-radius: 10px;
+}
+#pourquoi_donner_text{
+    margin:20px;
+    font-size: 1.3em;
+    color:black;
+    text-shadow: 2px 2px 2px white;
+}
 .container { 
     border: 2px solid white; 
     border-radius: 10px;
-    width: 40%; 
-    height: 40%;
+    width: 36.5%; 
+    height: 36.5%;
  }
 .outer-container{
     display: flex;  
@@ -87,8 +122,10 @@ section {
 }
 
 .total_recolte{
-    border: 2px solid rgb(147, 147, 255);
-    color:white;
+    border: 2px solid rgb(65, 65, 255);
+    color:rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
     text-align: center;
     width:15%;
     margin-left: auto;
@@ -97,4 +134,51 @@ section {
 .title{
     font-size: 1.5rem;
     font-weight: bold;
+    margin-bottom: -5px;
+}
+
+#bouton_don{
+    font-size: 2em;
+    background-color: white;
+    border: 2px solid rgb(168, 168, 255);
+    border-radius: 10px;
+    margin:auto
+}
+
+#bouton_donateurs{
+    font-size: 2em;
+    background-color: white;
+    border: 2px solid rgb(168, 168, 255);
+    border-radius: 10px;
+    margin:auto
+}
+
+#styletxt{
+    margin:10px;
+}
+
+form{
+    margin:20px;
+}
+#formulaire{
+    background-color: white;
+    border-radius: 10px;
+    border: 2px solid rgb(165, 165, 255);
+    width:50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+h2{
+    margin:20px
+}
+
+#submit{
+    width:25%;
+    height:150px;
+    margin-left:15%;
+}
+
+#img_form{
+    width:25%;
+    margin-left:20%
 }
