Nettoyage des fichiers inutiles

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
             <a href="{{url_for('index')}}">
                 <h1 id="header1">OceanPurify</h1>
                 <h2 id="header2">Un océan propre pour un avenir durable</h2>
-                <img src="{{url_for('static', filename = 'logo1.png')}}" id="logo"/>
+                <img src="{{url_for('static', filename = 'logo.png')}}" id="logo"/>
             </a>
         </div>   
           
